--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mbedtls"]
 	path = mbedtls
 	url = https://github.com/Mbed-TLS/mbedtls
+[submodule "musl"]
+	path = musl
+	url = git://git.musl-libc.org/musl
